seperate register and login handler
